--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     </header>
     <section class="big-page-flexbox">
         <section class="leftside-info">
-            <img class="leftside-info" src="/Assets/img/20201111_155151 1.jpg" alt="alt">
+            <!-- <img class="leftside-info" src="/Assets/img/20201111_155151 1.jpg" alt="alt"> -->
             <div>Collaborations</div>
             <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quibusdam, ea?</p> 
         
@@ -38,11 +38,11 @@
         </section>
     </section>
     <section class="big-page-flexbox">
-        <section class="leftside-info">
+        <section class="leftside-info2">
         <h1>LED</h1>
         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aliquam, velit!</p>
         </section>
-        <section class="rightside-info">
+        <section class="rightside-info2">
             <h1 id="projects">My Work</h1>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel, voluptatibus!</p>
     
